[tool.poetry]
name = "esp-api"
version = "0.1.0"
description = ""
authors = ["mks <rozhkov.mks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
python-json-logger = "^2.0.7"
sentry-sdk = "^1.40.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
alembic = "^1.13.1"
gunicorn = "^21.2.0"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
